cmake_minimum_required(VERSION 3.5)
project(threefinger_ctl)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(example_interfaces REQUIRED)

add_library(epos_driver src/epos_driver.cpp)
target_include_directories(epos_driver PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
ament_target_dependencies(
  epos_driver
  "rclcpp"
  "std_msgs"
  "example_interfaces"
)

# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(epos_driver PRIVATE "THREEFINGER_CTL_BUILDING_LIBRARY")

# Link the required libraries to the epos_driver target
target_link_libraries(epos_driver
  ${CMAKE_CURRENT_SOURCE_DIR}/lib/libEposCmd.so.6.5.1.0
  ${CMAKE_CURRENT_SOURCE_DIR}/lib/libftd2xx.so.1.4.8
)

install(
  DIRECTORY include/
  DESTINATION include
)
install(
  TARGETS epos_driver
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

add_executable(epos_node src/epos_node.cpp)
target_include_directories(epos_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_link_libraries(epos_node epos_driver ftd2xx)

install(TARGETS epos_node
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(
  include
)
ament_export_libraries(
  epos_driver
)
ament_export_targets(
  export_${PROJECT_NAME}
)

ament_package()